Création du composant Collapse : jsx et scss pour la page à propos + Correction style du composant Banner : transformation des textes minuscules en majuscules (uppercase) + Correction composant Banner : définition de la largeur occupée par la bannière

--- a/src/assets/variables_mixins.scss
+++ b/src/assets/variables_mixins.scss
@@ -18,3 +18,20 @@ $banner-container-radius: 25px;
     width: $width;
     height: $height;
 }
+
+@mixin text-font($weight, $size) {
+    font-weight: $weight;
+    font-size: $size;
+}
+
+@mixin flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@mixin flex-space-between-center {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
